# dash-recording-components

./: .gitignore  MANIFEST.in  README.md  _validate_init.py  app.py  babel.config.js  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: test.yml
dash_audio_components/: AudioRecorder.py  _imports_.py  dash_audio_components.dev.js  dash_audio_components.min.js  package.json
dash_recording_components/: AudioRecorder.py  __init__.py  dash_recording_components.dev.js  dash_recording_components.min.js  metadata.json  package.json
scripts/: release.sh
src/lib/: index.js
src/lib/__tests__/components/: AudioRecorder.test.js
src/lib/components/: AudioRecorder.react.js
