[tool.poetry]
name = "dash-audio-components"
version = "1.0.0"
description = "A Dash component for recording audio from the browser"
readme = "README.md"
authors = ["Daniel Cahall <danielenricocahall@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
dash = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pyyaml = "^5.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
