[tool.poetry]
name = "dash-recording-components"
version = "1.0.2"
description = "A Dash component for recording audio from the browser"
readme = "README.md"
authors = ["Daniel Cahall <danielenricocahall@gmail.com>"]
homepage = "https://github.com/danielenricocahall/dash-recording-components"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
dash = "^2.14.1"


[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
